force-app/main/default/objects/SD_Import__c/SD_Import__c.object-meta.xml
<CustomObject>
    <label>SD Import</label>
    <nameField>
        <displayFormat>SDI-{000000}</displayFormat>
        <label>SD Import</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SD Import</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>