force-app/main/default/objects/SD_Import__c/fields/AfdelingLabel__c.field-meta.xml
<CustomField>
    <fullName>AfdelingLabel__c</fullName>
    <label>AfdelingLabel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>