force-app/main/default/objects/SD_Import__c/fields/AfwezigheidDagdeelKode__c.field-meta.xml
<CustomField>
    <fullName>AfwezigheidDagdeelKode__c</fullName>
    <label>AfwezigheidDagdeelKode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>