force-app/main/default/objects/SD_Import__c/fields/AfwezigheidPresturen__c.field-meta.xml
<CustomField>
    <fullName>AfwezigheidPresturen__c</fullName>
    <label>AfwezigheidPresturen</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>