force-app/main/default/objects/SD_Import__c/fields/AfwezigheidscodelabelCode__c.field-meta.xml
<CustomField>
    <fullName>AfwezigheidscodelabelCode__c</fullName>
    <label>AfwezigheidscodelabelCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>