force-app/main/default/objects/SD_Import__c/fields/AfwezigheidscodelabelLabel__c.field-meta.xml
<CustomField>
    <fullName>AfwezigheidscodelabelLabel__c</fullName>
    <label>AfwezigheidscodelabelLabel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>