force-app/main/default/objects/SD_Import__c/fields/AfwezigheidsCodeNilosCode__c.field-meta.xml
<CustomField>
    <fullName>AfwezigheidsCodeNilosCode__c</fullName>
    <label>AfwezigheidsCodeNilosCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>