force-app/main/default/objects/SD_Import__c/fields/AfwezigheidStatusKode__c.field-meta.xml
<CustomField>
    <fullName>AfwezigheidStatusKode__c</fullName>
    <label>AfwezigheidStatusKode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>