force-app/main/default/objects/SD_Import__c/fields/ArbeidsContractWerknemer__c.field-meta.xml
<CustomField>
    <fullName>ArbeidsContractWerknemer__c</fullName>
    <label>ArbeidsContractWerknemer</label>
    <length>80</length>
    <type>Text</type>
</CustomField>