force-app/main/default/objects/SD_Import__c/fields/FirmaNaam__c.field-meta.xml
<CustomField>
    <fullName>FirmaNaam__c</fullName>
    <label>FirmaNaam</label>
    <length>255</length>
    <type>Text</type>
</CustomField>