force-app/main/default/objects/SD_Import__c/fields/FirmaWerkgeversNr__c.field-meta.xml
<CustomField>
    <fullName>FirmaWerkgeversNr__c</fullName>
    <label>FirmaWerkgeversNr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>