force-app/main/default/objects/SD_Import__c/fields/KalenderdagDat__c.field-meta.xml
<CustomField>
    <fullName>KalenderdagDat__c</fullName>
    <label>KalenderdagDat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>