force-app/main/default/objects/SD_Import__c/fields/KalenderdagInactiviteitsKode__c.field-meta.xml
<CustomField>
    <fullName>KalenderdagInactiviteitsKode__c</fullName>
    <label>KalenderdagInactiviteitsKode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>