force-app/main/default/objects/SD_Import__c/fields/KalenderdagPloegKode__c.field-meta.xml
<CustomField>
    <fullName>KalenderdagPloegKode__c</fullName>
    <label>KalenderdagPloegKode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>