force-app/main/default/objects/SD_Import__c/fields/KalenderdagPrestDag__c.field-meta.xml
<CustomField>
    <fullName>KalenderdagPrestDag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>KalenderdagPrestDag</label>
    <type>Checkbox</type>
</CustomField>