force-app/main/default/objects/SD_Import__c/fields/KalenderdagPrestUren__c.field-meta.xml
<CustomField>
    <fullName>KalenderdagPrestUren__c</fullName>
    <label>KalenderdagPrestUren</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>