force-app/main/default/objects/SD_Import__c/fields/KalenderdagPresturenVM__c.field-meta.xml
<CustomField>
    <fullName>KalenderdagPresturenVM__c</fullName>
    <label>KalenderdagPresturenVM</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>