force-app/main/default/objects/SD_Import__c/fields/PersoonId__c.field-meta.xml
<CustomField>
    <fullName>PersoonId__c</fullName>
    <label>PersoonId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>