force-app/main/default/objects/SD_Import__c/fields/PersoonRoepAchternaam__c.field-meta.xml
<CustomField>
    <fullName>PersoonRoepAchternaam__c</fullName>
    <label>PersoonRoepAchternaam</label>
    <length>255</length>
    <type>Text</type>
</CustomField>