force-app/main/default/objects/SD_Import__c/fields/PersoonRoepVoornaam__c.field-meta.xml
<CustomField>
    <fullName>PersoonRoepVoornaam__c</fullName>
    <label>PersoonRoepVoornaam</label>
    <length>255</length>
    <type>Text</type>
</CustomField>