force-app/main/default/objects/SD_Import__c/fields/Werkschema__c.field-meta.xml
<CustomField>
    <fullName>Werkschema__c</fullName>
    <label>Werkschema</label>
    <length>2</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>