force-app/main/default/objects/SD_Import__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PersoonId__c</columns>
    <columns>PersoonRoepAchternaam__c</columns>
    <columns>PersoonRoepVoornaam__c</columns>
    <columns>FirmaWerkgeversNr__c</columns>
    <columns>FirmaNaam__c</columns>
    <columns>ArbeidsContractWerknemer__c</columns>
    <columns>AfdelingLabel__c</columns>
    <columns>KalenderdagDat__c</columns>
    <columns>KalenderdagPrestDag__c</columns>
    <columns>KalenderdagInactiviteitsKode__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>